Trying my cutsom workflow. Stuck in ef migration

--- a/samples/WebApi/appsettings.json
+++ b/samples/WebApi/appsettings.json
@@ -3,7 +3,6 @@
     "schema": "http",
     "host": "localhost",
     "port": 5000
-    // "unixSocket": "/tmp/kestrel-test.sock"
   },
   "CertificateSettings": {
     "fileName": "localhost.pfx",
@@ -62,6 +61,12 @@
         "Title": "Issue",
         "Description": "Simple issue tracking process.",
         "Route": "issue"
+      },
+      {
+        "Type": "SoftwareRequestWorkflow",
+        "Title": "SoftwareRequest",
+        "Description": "Simple software request process.",
+        "Route": "softwareRequest"
       },
       {
         "Type": "StepperWorkflow",
